--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>Zombicide Game Board</title>
   </head>
-  <body>
+  <body style="background-color: #aaa;">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
